# ulc-malaria-autofocus

./: .gitignore  README.md  alrc.py  argparsers.py  data_loader.py  dataloader.py  export_model.py  infer.py  investigations.ipynb  model.py  nn_analysis.py  prepush.sh  profile_training.py  pyproject.toml  ssaf_rerun_all.py  ssaf_training.sh  submit-scope.sh  sweep.yml  sweep_launch.sh  test.sh  to_onxx.py  train.py  visualize_trained.py  warm-voice-30_101_40.mapping  warm-voice-30_101_40.xml
autofocus/: __init__.py  argparsers.py  dataloader.py  export_model.py  infer.py  model.py  profile_training.py  train.py
investigations/: rank_loss.py
investigations/learning_error_over_time/: confusion.json  confusion_vis.py  glowing_rain_confusion.json  randcrop_confusion.json
